	* deprecated mmap_cache feature
	* add utility function for generating peer ID fingerprint
	* fix bug in last-seen-complete
	* remove file size limit in torrent_info filename constructor
	* fix tail-padding for last file in create_torrent
	* don't send user-agent in metadata http downloads or UPnP requests when
	  in anonymous mode
	* fix internal resolve links lookup for mutable torrents
	* hint DHT bootstrap nodes of actual bootstrap request

1.1.1 release

	* update puff.c for gzip inflation
	* add dht_bootstrap_node a setting in settings_pack (and add default)
	* make pad-file and symlink support conform to BEP47
	* fix piece picker bug that could result in division by zero
	* fix value of current_tracker when all tracker failed
	* deprecate lt_trackers extension
	* remove load_asnum_db and load_country_db from python bindings
	* fix crash in session::get_ip_filter when not having set one
	* fix filename escaping when repairing torrents with broken web seeds
	* fix bug where file_completed_alert would not be posted unless file_progress
	  had been queries by the client
	* move files one-by-one when moving storage for a torrent
	* fix bug in enum_net() for BSD and Mac
	* fix bug in python binding of announce_entry
	* fixed bug related to flag_merge_resume_http_seeds flag in add_torrent_params
	* fixed inverted priority of incoming piece suggestions
	* optimize allow-fast logic
	* fix issue where FAST extension messages were not used during handshake
	* fixed crash on invalid input in http_parser
	* upgraded to libtommath 1.0
	* fixed parsing of IPv6 endpoint with invalid port character separator
	* added limited support for new x.pe parameter from BEP 9
	* fixed dht stats counters that weren't being updated
	* make sure add_torrent_alert is always posted before other alerts for
	  the torrent
	* fixed peer-class leak when settings per-torrent rate limits
	* added a new "preformatted" type to bencode entry variant type